@@ -30,7 +30,9 @@ that are configured as hidden and partitions that are unavailable to user's
 group.
 .TP
 \fB\-d\fR, \fB\-\-details\fR
-Causes the \fBshow\fR command to provide additional details where available.
+Causes the \fIshow\fR command to provide additional details where available.
+Repeating the option more than once (e.g., "\-dd") will cause the \fIshow job\fR
+command to also list the batch script, if the job was a batch job.
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 Print a help message describing the usage of scontrol.
@@ -151,8 +153,6 @@ If the specified partition is in use, the request is denied.
 .TP
 \fBdetails\fP
 Causes the \fIshow\fP command to provide additional details where available.
-Batch job information will include the batch script for jobs the user is
-authorized to view.
 Job information will include CPUs and NUMA memory allocated on each node.
 Note that on computers with hyperthreading enabled and SLURM configured to
 allocate cores, each listed CPU represents one physical core.
@@ -161,7 +161,8 @@ CPU count and task count may differ.
 See the \fB\-\-cpu_bind\fR and \fB\-\-mem_bind\fR option descriptions in
 srun man pages for more information.
 The \fBdetails\fP option is currently only supported for the \fIshow job\fP
-command.
+command. To also list the batch script for batch jobs, in addition to the
+details, use the \fBscript\fP option described below instead of this option.
 
 .TP
 \fBexit\fP
@@ -274,6 +275,12 @@ This value is temporary and will be overwritten when the slurmctld
 daemon reads the slurm.conf configuration file (e.g. when the daemon 
 is restarted or \fBscontrol reconfigure\fR is executed) if the
 SlurmSchedLogLevel parameter is present.
+
+.TP
+\fBscript\fP
+Causes the \fIshow job\fP command to list the batch script for batch
+jobs in addition to the detail information described under the
+\fBdetails\fP option above.
 
 .TP
 \fBsetdebug\fP \fILEVEL\fP
